Improve ContentBrowserView visibility

--- a/NiziKit.Editor/Views/ContentBrowserView.axaml
+++ b/NiziKit.Editor/Views/ContentBrowserView.axaml
@@ -7,54 +7,56 @@
              x:DataType="vm:ContentBrowserViewModel">
 
     <Panel>
-        <!-- Responsive sidebar with min/max constraints -->
         <Grid ColumnDefinitions="Auto,*">
             <Border Grid.Column="0"
                     Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
                     BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
                     BorderThickness="0,0,1,0"
-                    Padding="6"
-                    MinWidth="150"
-                    MaxWidth="250"
-                    Width="180">
+                    Padding="12"
+                    MinWidth="320"
+                    MaxWidth="450"
+                    Width="380">
                 <Grid RowDefinitions="Auto,*">
-                    <Grid Grid.Row="0" ColumnDefinitions="*,Auto" Margin="6,4,0,8">
-                        <TextBlock Text="Packs"
-                                   Classes="body-large"
-                                   FontWeight="SemiBold"
-                                   VerticalAlignment="Center"
-                                   TextTrimming="CharacterEllipsis"/>
+                    <Grid Grid.Row="0" ColumnDefinitions="*,Auto" Margin="8,4,0,16">
+                        <TextBlock Text="Asset Packs"
+                                   Classes="subtitle"
+                                   VerticalAlignment="Center"/>
                         <Button Grid.Column="1"
                                 Command="{Binding CreatePackCommand}"
                                 ToolTip.Tip="Create new pack"
-                                Padding="6">
-                            <ui:SymbolIcon Symbol="Add" FontSize="14"/>
+                                Padding="10">
+                            <ui:SymbolIcon Symbol="Add" FontSize="20"/>
                         </Button>
                     </Grid>
 
-                    <ListBox Grid.Row="1"
-                             ItemsSource="{Binding PackTree}"
-                             SelectedItem="{Binding SelectedFolder}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate x:DataType="vm:FolderTreeNode">
-                                <StackPanel Orientation="Horizontal" Spacing="8" Margin="4,2">
-                                    <PathIcon Data="{Binding IconData}"
-                                              Width="16" Height="16"
-                                              Foreground="{DynamicResource AccentFillColorDefaultBrush}"/>
-                                    <TextBlock Text="{Binding Name}"
-                                               VerticalAlignment="Center"
-                                               TextTrimming="CharacterEllipsis"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                    <ScrollViewer Grid.Row="1"
+                                  HorizontalScrollBarVisibility="Disabled"
+                                  VerticalScrollBarVisibility="Auto">
+                        <TreeView ItemsSource="{Binding PackTree}"
+                                  SelectedItem="{Binding SelectedFolder}">
+                            <TreeView.ItemTemplate>
+                                <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="vm:FolderTreeNode">
+                                    <StackPanel Orientation="Horizontal" Spacing="12" Margin="4,6">
+                                        <PathIcon Data="{Binding IconData}"
+                                                  Width="24" Height="24"
+                                                  Foreground="{DynamicResource AccentFillColorDefaultBrush}"/>
+                                        <TextBlock Text="{Binding Name}"
+                                                   Classes="body"
+                                                   VerticalAlignment="Center"
+                                                   TextWrapping="NoWrap"
+                                                   MaxWidth="280"/>
+                                    </StackPanel>
+                                </TreeDataTemplate>
+                            </TreeView.ItemTemplate>
+                        </TreeView>
+                    </ScrollViewer>
                 </Grid>
             </Border>
 
             <Grid Grid.Column="1" RowDefinitions="Auto,*,Auto">
                 <Grid Grid.Row="0"
                       ColumnDefinitions="*,Auto,Auto"
-                      Margin="8,8,8,4">
+                      Margin="16,12,16,8">
                     <ScrollViewer Grid.Column="0"
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Disabled"
@@ -73,13 +75,15 @@
                                                 CommandParameter="{Binding Path}"
                                                 Background="Transparent"
                                                 BorderThickness="0"
-                                                Padding="6,8"
+                                                Padding="10,12"
                                                 Cursor="Hand"
                                                 VerticalAlignment="Center">
                                             <TextBlock Text="{Binding Name}"
+                                                       Classes="body"
                                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
                                         </Button>
                                         <TextBlock Text="/"
+                                                   Classes="body"
                                                    VerticalAlignment="Center"
                                                    Margin="2,0"
                                                    Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
@@ -91,9 +95,9 @@
 
                     <ComboBox Grid.Column="1"
                               SelectedIndex="{Binding FilterIndex}"
-                              MinWidth="120"
+                              MinWidth="150"
                               VerticalAlignment="Center"
-                              Margin="8,0">
+                              Margin="12,0">
                         <ComboBoxItem Content="All"/>
                         <ComboBoxItem Content="Models"/>
                         <ComboBoxItem Content="Textures"/>
@@ -105,19 +109,19 @@
                     <TextBox Grid.Column="2"
                              Text="{Binding SearchText}"
                              Watermark="Search..."
-                             MinWidth="120"
-                             MaxWidth="250"
-                             Width="180"
+                             MinWidth="160"
+                             MaxWidth="300"
+                             Width="220"
                              VerticalAlignment="Center">
                         <TextBox.InnerLeftContent>
-                            <ui:SymbolIcon Symbol="Find" FontSize="14" Margin="8,0,0,0"/>
+                            <ui:SymbolIcon Symbol="Find" FontSize="18" Margin="10,0,0,0"/>
                         </TextBox.InnerLeftContent>
                     </TextBox>
                 </Grid>
 
                 <Border Grid.Row="1"
                         x:Name="ContentGridBorder"
-                        Margin="8,4,8,8"
+                        Margin="16,8,16,12"
                         Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
                         CornerRadius="{DynamicResource ControlCornerRadius}">
                     <ListBox x:Name="ContentGrid"
@@ -134,39 +138,45 @@
                         </ListBox.ItemsPanel>
                         <ListBox.ItemTemplate>
                             <DataTemplate x:DataType="vm:ContentItem">
-                                <!-- Content tile with responsive sizing -->
-                                <Border Classes="content-tile"
+                                <Border Width="180" Height="180"
+                                        Margin="8"
+                                        Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+                                        CornerRadius="8"
+                                        Padding="14"
                                         ToolTip.Tip="{Binding TypeLabel}"
                                         PointerPressed="OnItemPointerPressed">
-                                    <Grid RowDefinitions="*,Auto,Auto">
+                                    <Grid RowDefinitions="Auto,*,Auto">
                                         <PathIcon Grid.Row="0"
                                                   Data="{Binding IconData}"
-                                                  Width="40" Height="40"
+                                                  Width="64" Height="64"
                                                   Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                                                   HorizontalAlignment="Center"
-                                                  VerticalAlignment="Center"/>
+                                                  VerticalAlignment="Center"
+                                                  Margin="0,8,0,0"/>
 
                                         <TextBlock Grid.Row="1"
                                                    Text="{Binding Name}"
                                                    TextWrapping="Wrap"
-                                                   TextTrimming="CharacterEllipsis"
                                                    TextAlignment="Center"
-                                                   MaxHeight="40"
-                                                   Margin="0,8,0,0"
+                                                   FontSize="{StaticResource FontSizeCaption}"
+                                                   MaxLines="3"
+                                                   Margin="0,10,0,0"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Top"
                                                    ToolTip.Tip="{Binding Name}"/>
 
                                         <Border Grid.Row="2"
                                                 IsVisible="{Binding HasModelInfo}"
                                                 Background="{DynamicResource AccentFillColorDefaultBrush}"
                                                 CornerRadius="4"
-                                                Padding="6,2"
+                                                Padding="10,4"
                                                 HorizontalAlignment="Center"
-                                                Margin="0,4,0,0">
-                                            <StackPanel Orientation="Horizontal" Spacing="4">
-                                                <TextBlock Text="{Binding MeshCount}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
-                                                <TextBlock Text="M" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
-                                                <TextBlock Text="{Binding AnimationCount}" IsVisible="{Binding HasSkeleton}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
-                                                <TextBlock Text="A" IsVisible="{Binding HasSkeleton}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
+                                                Margin="0,6,0,0">
+                                            <StackPanel Orientation="Horizontal" Spacing="6">
+                                                <TextBlock Text="{Binding MeshCount}" FontSize="{StaticResource FontSizeCaption}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
+                                                <TextBlock Text="M" FontSize="{StaticResource FontSizeCaption}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
+                                                <TextBlock Text="{Binding AnimationCount}" FontSize="{StaticResource FontSizeCaption}" IsVisible="{Binding HasSkeleton}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
+                                                <TextBlock Text="A" FontSize="{StaticResource FontSizeCaption}" IsVisible="{Binding HasSkeleton}" Foreground="{DynamicResource TextOnAccentFillColorPrimaryBrush}"/>
                                             </StackPanel>
                                         </Border>
                                     </Grid>
@@ -178,11 +188,11 @@
 
                 <Border Grid.Row="2"
                         Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                        Padding="12,6"
+                        Padding="20,10"
                         IsVisible="{Binding StatusMessage, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
                     <TextBlock Text="{Binding StatusMessage}"
-                               Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                               TextTrimming="CharacterEllipsis"/>
+                               Classes="body"
+                               Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
                 </Border>
             </Grid>
         </Grid>
