--- a/NiziKit.Editor/EditorApp.axaml
+++ b/NiziKit.Editor/EditorApp.axaml
@@ -16,9 +16,38 @@
         <SolidColorBrush x:Key="AxisYBrush" Color="{StaticResource AxisYColor}"/>
         <SolidColorBrush x:Key="AxisZBrush" Color="{StaticResource AxisZColor}"/>
 
+        <Color x:Key="EditorAccent">#7C4DFF</Color>
+        <Color x:Key="EditorAccentLight">#B388FF</Color>
+        <Color x:Key="EditorAccentDark">#5E35B1</Color>
+
+        <SolidColorBrush x:Key="EditorAccentBrush" Color="{StaticResource EditorAccent}"/>
+        <SolidColorBrush x:Key="EditorAccentLightBrush" Color="{StaticResource EditorAccentLight}"/>
+        <SolidColorBrush x:Key="EditorAccentDarkBrush" Color="{StaticResource EditorAccentDark}"/>
+
         <SolidColorBrush x:Key="EditorPanelBackground" Color="#FF1A1A1A"/>
         <SolidColorBrush x:Key="EditorPanelSecondaryBackground" Color="#FF141414"/>
+        <SolidColorBrush x:Key="EditorPanelTertiaryBackground" Color="#FF0F0F0F"/>
+        <SolidColorBrush x:Key="EditorPanelElevated" Color="#FF242424"/>
         <SolidColorBrush x:Key="EditorPanelBorder" Color="#FF3A3A3A"/>
+        <SolidColorBrush x:Key="EditorPanelBorderLight" Color="#FF4A4A4A"/>
+
+        <SolidColorBrush x:Key="EditorTextPrimary" Color="#FFFFFFFF"/>
+        <SolidColorBrush x:Key="EditorTextSecondary" Color="#FFB0B0B0"/>
+        <SolidColorBrush x:Key="EditorTextMuted" Color="#FF707070"/>
+        <SolidColorBrush x:Key="EditorTextDisabled" Color="#FF4A4A4A"/>
+
+        <SolidColorBrush x:Key="EditorSuccess" Color="#FF4CAF50"/>
+        <SolidColorBrush x:Key="EditorWarning" Color="#FFFFC107"/>
+        <SolidColorBrush x:Key="EditorError" Color="#FFF44336"/>
+        <SolidColorBrush x:Key="EditorInfo" Color="#FF2196F3"/>
+
+        <SolidColorBrush x:Key="EditorHover" Color="#1AFFFFFF"/>
+        <SolidColorBrush x:Key="EditorActive" Color="#33FFFFFF"/>
+        <SolidColorBrush x:Key="EditorSelected" Color="#337C4DFF"/>
+        <SolidColorBrush x:Key="EditorSelectedBorder" Color="#FF7C4DFF"/>
+
+        <SolidColorBrush x:Key="EditorHeaderBackground" Color="#FF252525"/>
+        <SolidColorBrush x:Key="EditorHeaderAccent" Color="#FF7C4DFF"/>
     </Application.Resources>
 
     <Application.Styles>
