--- a/NiziKit.Editor/Styles/EditorStyles.axaml
+++ b/NiziKit.Editor/Styles/EditorStyles.axaml
@@ -9,6 +9,14 @@
         <x:Double x:Key="FontSizeTitle">30</x:Double>
         <x:Double x:Key="FontSizeHeader">36</x:Double>
 
+        <x:Double x:Key="IconSizeSmall">12</x:Double>
+        <x:Double x:Key="IconSizeBase">16</x:Double>
+        <x:Double x:Key="IconSizeMedium">18</x:Double>
+        <x:Double x:Key="IconSizeLarge">20</x:Double>
+        <x:Double x:Key="IconSizeXL">32</x:Double>
+        <x:Double x:Key="IconSizeXXL">48</x:Double>
+        <x:Double x:Key="IconSizeHuge">56</x:Double>
+
         <x:Double x:Key="PanelMinWidth">280</x:Double>
         <x:Double x:Key="PanelMaxWidth">500</x:Double>
         <x:Double x:Key="PanelPreferredWidth">380</x:Double>
