--- a/NiziKit.Editor/Views/ComponentsPanel.axaml
+++ b/NiziKit.Editor/Views/ComponentsPanel.axaml
@@ -12,8 +12,8 @@
             <StackPanel IsVisible="{Binding !HasSelection}"
                         HorizontalAlignment="Center"
                         Margin="0,40">
-                <ui:SymbolIcon Symbol="People"
-                               FontSize="48"
+<ui:SymbolIcon Symbol="People"
+                               FontSize="{StaticResource IconSizeXXL}"
                                Foreground="{DynamicResource TextFillColorTertiaryBrush}"
                                HorizontalAlignment="Center"
                                Margin="0,0,0,12"/>
