Support persisting animations, open scene functionality

--- a/NiziKit.Editor/EditorMainView.axaml
+++ b/NiziKit.Editor/EditorMainView.axaml
@@ -19,6 +19,7 @@
                     Padding="4,2">
                 <Menu>
                     <MenuItem Header="File">
+                        <MenuItem Header="Open Scene..." Command="{Binding OpenSceneCommand}" InputGesture="Ctrl+O"/>
                         <MenuItem Header="Save Scene" Command="{Binding SaveSceneCommand}" InputGesture="Ctrl+S"/>
                     </MenuItem>
                     <MenuItem Header="Edit">
@@ -60,7 +61,7 @@
                     </Grid>
                 </Border>
 
-                <Panel Grid.Column="1" Background="Transparent" MinWidth="200">
+                <Panel Grid.Column="1" MinWidth="200">
                     <views:ViewportToolbar HorizontalAlignment="Center"
                                            VerticalAlignment="Top"
                                            Margin="0,8,0,0"
@@ -201,6 +202,8 @@
             <Border Classes="dialog-container-large"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
+                    Width="1200"
+                    Height="800"
                     Margin="40">
                 <Grid RowDefinitions="Auto,Auto,*">
                     <Border Grid.Row="0"
@@ -231,6 +234,78 @@
             <editors:AssetPickerDialog x:Name="AssetPickerDialog"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"/>
+        </Border>
+
+        <Border IsVisible="{Binding IsOpenSceneDialogOpen}"
+                Background="#60000000"
+                ZIndex="1100">
+            <Border Classes="dialog-container-large"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Width="800"
+                    Height="600"
+                    Margin="40">
+                <Grid RowDefinitions="Auto,Auto,*">
+                    <Border Grid.Row="0"
+                            Background="{StaticResource EditorPanelSecondaryBackground}"
+                            CornerRadius="8,8,0,0"
+                            Padding="24,16">
+                        <Grid ColumnDefinitions="*,Auto">
+                            <TextBlock Text="Open Scene"
+                                       Classes="subtitle"
+                                       VerticalAlignment="Center"/>
+                            <Button Grid.Column="1"
+                                    Command="{Binding CloseOpenSceneDialogCommand}"
+                                    ToolTip.Tip="Close"
+                                    Padding="8">
+                                <ui:SymbolIcon Symbol="Dismiss" FontSize="18"/>
+                            </Button>
+                        </Grid>
+                    </Border>
+                    <Border Grid.Row="1" Height="1" Background="{DynamicResource DividerStrokeColorDefaultBrush}"/>
+                    <views:FileBrowserGrid Grid.Row="2"
+                                           x:Name="SceneBrowserGrid"
+                                           DataContext="{Binding SceneBrowserViewModel}"
+                                           Margin="16"/>
+                </Grid>
+            </Border>
+        </Border>
+
+        <Border IsVisible="{Binding IsSavePromptOpen}"
+                Background="#60000000"
+                ZIndex="1200">
+            <Border Background="{StaticResource EditorPanelBackground}"
+                    BorderBrush="{StaticResource EditorPanelBorder}"
+                    BorderThickness="1"
+                    CornerRadius="8"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Padding="32"
+                    MinWidth="400">
+                <StackPanel Spacing="24">
+                    <TextBlock Text="Save Changes?"
+                               Classes="subtitle"
+                               HorizontalAlignment="Center"/>
+                    <TextBlock Text="The current scene has unsaved changes. Would you like to save before opening another scene?"
+                               TextWrapping="Wrap"
+                               TextAlignment="Center"
+                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
+                    <StackPanel Orientation="Horizontal"
+                                HorizontalAlignment="Center"
+                                Spacing="12">
+                        <Button Content="Save"
+                                Command="{Binding SavePromptSaveCommand}"
+                                Classes="accent"
+                                Padding="24,10"/>
+                        <Button Content="Don't Save"
+                                Command="{Binding SavePromptDiscardCommand}"
+                                Padding="24,10"/>
+                        <Button Content="Cancel"
+                                Command="{Binding SavePromptCancelCommand}"
+                                Padding="24,10"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
         </Border>
     </Panel>
 </UserControl>
